--- a/styles/base.css
+++ b/styles/base.css
@@ -1,5 +1,7 @@
+/* ----------Base Settings---------- */
+
 :root {
-    /*Typography Sizing */
+    /*Typography */
 
     --font-size-1: 1.2rem;
     --font-size-2: 1.4rem;
@@ -13,6 +15,11 @@
     --font-size-10: 4.8rem;
     --font-size-11: 6rem;
     --font-size-12: 7.6rem;
+
+    --font-weight-300: 300;
+    --font-weight-400: 400;
+    --font-weight-500: 500;
+    --font-weight-600: 600;
 
     /* Spacing Sizing */
 
@@ -29,6 +36,11 @@
     --spacing-11: 8rem;
     --spacing-12: 9.6rem;
 
+    --logo-big--height: 4.8rem;
+    --logo-small--height: 4rem;
+    --btn-lg-height: 6rem;
+    --btn-sm-height: 5.2rem;
+
     /* Colors */
 
     --blue-10: #e5f1ff;
@@ -39,19 +51,18 @@
     --yellow-100: #ffbe3d;
     --watermelon-pink-10: #ffe3de;
     --watermelon-pink-100: #ff715b;
+    --white: #ffffff;
 
     --text-color-10: #b0b7c3;
     --text-color-20: #8a94a6;
     --text-color-30: #4e5d78;
     --text-color-40: #323b4b;
 
-    --bg-color-10: #ffffff;
+    --bg-color-10: var(--white);
     --bg-color-20: #fafbfc;
     --bg-color-30: #f3f3f3;
     --bg-color-40: #c1c7d0;
 }
-
-/* ----------Base Settings---------- */
 
 *,
 *::after,
@@ -68,4 +79,17 @@ html {
 
 body {
     font-family: "Inter", sans-serif;
+}
+
+html,
+body {
+    -webkit-text-rendering: optimizeLegibility;
+    text-rendering: optimizeLegibility;
+}
+
+ul {
+    list-style-type: none;
+}
+a {
+    text-decoration: none;
 }
