--- a/styles/base.css
+++ b/styles/base.css
@@ -16,6 +16,19 @@
     --font-size-11: 6rem;
     --font-size-12: 7.6rem;
 
+    --line-height-1: 1.6rem;
+    --line-height-2: 1.8rem;
+    --line-height-3: 2.4rem;
+    --line-height-4: 3rem;
+    --line-height-5: 3.2rem;
+    --line-height-6: 3.6rem;
+    --line-height-7: 4rem;
+    --line-height-8: 4.8rem;
+    --line-height-9: 5.6rem;
+    --line-height-10: 6.4rem;
+    --line-height-11: 7.6rem;
+    --line-height-12: 9.2rem;
+
     --font-weight-300: 300;
     --font-weight-400: 400;
     --font-weight-500: 500;
@@ -35,6 +48,8 @@
     --spacing-10: 6.4rem;
     --spacing-11: 8rem;
     --spacing-12: 9.6rem;
+    --spacing-13: 11.2rem;
+    --spacing-14: 12.8rem;
 
     --logo-big--height: 4.8rem;
     --logo-small--height: 4rem;
@@ -92,4 +107,75 @@ ul {
 }
 a {
     text-decoration: none;
+}
+
+/* ---------- Reusable ---------- */
+
+.container {
+    width: 100%;
+}
+
+.row {
+    max-width: 144rem;
+    margin: 0 auto;
+    padding: 0 var(--spacing-12);
+}
+
+/* Nav */
+
+.nav__link {
+    font-size: var(--font-size-3);
+    font-weight: var(--font-weight-500);
+    line-height: var(--spacing-6);
+    color: var(--text-color-20);
+}
+
+/* Buttons */
+
+.btn {
+    font-family: "Inter", sans-serif;
+    border-radius: var(--spacing-3);
+    border: none;
+    padding: 0 var(--spacing-6);
+    cursor: pointer;
+
+    display: flex;
+    align-items: center;
+    gap: var(--spacing-5);
+}
+
+.btn-sm {
+    height: var(--btn-sm-height);
+    font-size: var(--font-size-3);
+    font-weight: var(--font-weight-500);
+}
+
+.btn-lg {
+    height: var(--btn-lg-height);
+    font-size: var(--font-size-4);
+    font-weight: var(--font-weight-600);
+}
+
+.btn-primary {
+    background-color: var(--blue-100);
+    color: var(--white);
+}
+
+.btn-secondary {
+    background-color: var(--blue-10);
+    color: var(--blue-100);
+}
+
+/* Typography */
+
+.heading-1 {
+    font-size: var(--font-size-12);
+    color: var(--text-color-40);
+    line-height: var(--line-height-12);
+}
+
+.sub-heading {
+    font-size: var(--font-size-5);
+    color: var(--text-color-20);
+    line-height: var(--line-height-5);
 }
