--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,56 +1,11 @@
-/* ---------- Reusable ---------- */
-
-.container {
-    width: 100%;
-}
-
-.row {
-    max-width: 144rem;
-    margin: 0 auto;
-    padding: 0 var(--spacing-12);
-}
-
-.nav__link {
-    font-size: var(--font-size-3);
-    font-weight: var(--font-weight-500);
-    line-height: var(--spacing-6);
-    color: var(--text-color-20);
-}
-
-.btn {
-    font-family: inherit;
-    font-size: var(--font-size-3);
-    font-weight: var(--font-weight-500);
-    border-radius: var(--spacing-3);
-    border: none;
-    padding: 0 var(--spacing-6);
-}
-
-.btn-sm {
-    height: var(--btn-sm-height);
-}
-
-.btn-lg {
-    height: var(--btn-sm-height);
-}
-
-.btn-contained {
-    background-color: var(--blue-100);
-    color: var(--white);
-}
-
-.btn-outlined {
-    background-color: var(--blue-10);
-    color: var(--blue-100);
-}
-
 /* ---------- Top Navigation ---------- */
 
 .nav__content {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 13.3rem;
+    height: var(--spacing-14);
+    margin-bottom: var(--spacing-13);
 }
 
 .nav__logo {
@@ -61,4 +16,31 @@
 .nav__links {
     display: flex;
     gap: var(--spacing-7);
+}
+
+/* ---------- Header ---------- */
+
+.header__content {
+    display: flex;
+    justify-content: center;
+}
+
+.header__content > div {
+    max-width: 86rem;
+}
+
+#header__heading {
+    text-align: center;
+    margin-bottom: var(--spacing-7);
+}
+
+.header__sub-heading {
+    text-align: center;
+}
+
+.header__buttons {
+    display: flex;
+    justify-content: center;
+    gap: var(--spacing-7);
+    margin-top: var(--spacing-9);
 }
