--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@
 }
 
 .nav__logo {
-    height: var(--logo-big--height);
+    height: var(--logo-big-height);
     width: auto;
 }
 
@@ -217,4 +217,28 @@ img.header__hero {
 
 .package-satisfaction {
     color: var(--yellow-100);
+}
+
+/* ---------- Advantages Section ---------- */
+
+.video-section h2,
+.video-section p {
+    text-align: center;
+    max-width: 86rem;
+    margin: 0 auto;
+}
+
+.video-section h2 {
+    margin-bottom: var(--spacing-7);
+}
+
+.video-section p {
+    margin-bottom: var(--spacing-11);
+}
+
+.video-section__video {
+    border: none;
+    height: 56.8rem;
+    width: 100%;
+    border-radius: 1rem;
 }
