--- a/styles/styles.css
+++ b/styles/styles.css
@@ -408,7 +408,7 @@ img.header__hero {
 .cta-section__text > p {
     font-size: var(--font-size-5);
     font-weight: var(--font-weight-400);
-    line-height: var(--spacing-6);
+    line-height: var(--line-height-5);
     color: var(--text-color-20);
 }
 
@@ -417,4 +417,51 @@ img.header__hero {
     justify-content: space-between;
     align-items: center;
     gap: var(--spacing-7);
+}
+
+/* ---------- Footer ---------- */
+
+.footer__content {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    margin-bottom: var(--spacing-12);
+}
+
+.company__brand {
+    flex: 0 0 30rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: var(--spacing-7);
+}
+
+.company__logo {
+    height: var(--logo-small-height);
+    width: auto;
+}
+
+.company__brand > p,
+.company__legal > p {
+    font-size: var(--font-size-5);
+    font-weight: var(--font-weight-400);
+    line-height: var(--line-height-5);
+    color: var(--text-color-20);
+}
+
+.company__socials {
+    align-self: stretch;
+    display: flex;
+    gap: var(--spacing-6);
+}
+
+.company__links ul {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-5);
+}
+
+.company__links > h6 {
+    margin-bottom: var(--spacing-7);
 }
