--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,6 @@
 /* ---------- Header ---------- */
 
 #header {
-    height: 118rem;
     padding-top: var(--spacing-13);
     position: relative;
 }
@@ -28,7 +27,7 @@
 #after-header-bg {
     position: absolute;
     bottom: 0;
-    height: 38rem;
+    height: 20vw;
     width: 100%;
     background-color: var(--bg-color-20);
     z-index: -1;
@@ -60,13 +59,16 @@
 }
 
 img.header__hero {
+    display: block;
     height: auto;
     width: 100%;
     max-width: 140rem;
-    position: absolute;
+
+    margin: 0 auto;
+    /* position: absolute;
 
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%); */
 }
 
 /* ---------- trustedby Section ---------- */
