--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,21 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 /* ---------- Top Navigation ---------- */
 
 .nav__content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     height: var(--spacing-14);
 }
@@ -13,6 +26,8 @@
 }
 
 .nav__links {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: var(--spacing-7);
 }
@@ -34,7 +49,11 @@
 }
 
 .header__content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
@@ -52,7 +71,11 @@
 }
 
 .header__buttons {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     gap: var(--spacing-7);
     margin-top: var(--spacing-9);
@@ -81,14 +104,25 @@ img.header__hero {
 
 .trustedby-section__content {
     height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     gap: var(--spacing-7);
 }
 
 .trustedby-section__logos {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
 }
 
@@ -104,24 +138,47 @@ img.header__hero {
 
 .row.advantages-section__content {
     padding-right: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: var(--spacing-12);
 }
 
 .advantages-section__info {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 1 50%;
     flex: 0 1 50%;
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
     order: 1;
 
+    display: -webkit-box;
+
+    display: -ms-flexbox;
+
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     gap: var(--spacing-7);
 }
 
 .advantages-section__image {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
     flex: 0 0 50%;
+    -webkit-box-ordinal-group: 3;
+    -ms-flex-order: 2;
     order: 2;
 }
 
@@ -129,18 +186,31 @@ img.header__hero {
     width: 100%;
     height: auto;
 
+    -webkit-box-shadow: -2rem 2rem 2rem var(--bg-color-30);
+
     box-shadow: -2rem 2rem 2rem var(--bg-color-30);
 }
 
 .advantages-section__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
     justify-content: flex-start;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
 
 .advantages-section__list li {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
     flex: 0 0 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: var(--spacing-5);
 
@@ -163,13 +233,21 @@ img.header__hero {
 /* ---------- Package Section ---------- */
 
 .package-section__content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: var(--spacing-12);
 }
 
 .package-section__image {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
     flex: 0 0 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -179,22 +257,42 @@ img.header__hero {
 }
 
 .package-section__info {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 1 50%;
     flex: 0 1 50%;
 
+    display: -webkit-box;
+
+    display: -ms-flexbox;
+
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     gap: var(--spacing-7);
 }
 
 .package-section__details {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
     justify-content: flex-start;
     gap: var(--spacing-9);
 }
 
 .package-section__detail {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     gap: var(--spacing-3);
 }
@@ -247,20 +345,28 @@ img.header__hero {
 }
 
 .features-section__cards {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: var(--spacing-7);
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
 
 .feature-card {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 30rem;
     flex: 1 0 30rem;
     background-color: var(--bg-color-10);
     padding: var(--spacing-7);
     border-radius: 1.5rem;
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
     transition: all 0.3s;
 }
 
 .feature-card:hover {
+    -webkit-box-shadow: 0rem 5rem 7.7rem rgba(176, 183, 195, 0.22);
     box-shadow: 0rem 5rem 7.7rem rgba(176, 183, 195, 0.22);
 }
 
@@ -287,8 +393,14 @@ img.header__hero {
 }
 
 .pricing-section__plan-switcher {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     gap: var(--spacing-6);
     margin-bottom: var(--spacing-10);
@@ -302,26 +414,43 @@ img.header__hero {
 }
 
 .pricing-section__plans {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: var(--spacing-7);
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
 
 .pricing-card {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 35rem;
     flex: 1 0 35rem;
     background-color: var(--bg-color-10);
     border: var(--spacing-1) solid var(--bg-color-20);
     border-radius: 1.5rem;
     padding: var(--spacing-8);
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
     transition: all 0.3s;
     position: relative;
 
+    display: -webkit-box;
+
+    display: -ms-flexbox;
+
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
 }
 
 .pricing-card:hover {
+    -webkit-box-shadow: 0px 50px 77px rgba(176, 183, 195, 0.22);
     box-shadow: 0px 50px 77px rgba(176, 183, 195, 0.22);
 }
 
@@ -337,7 +466,11 @@ img.header__hero {
 }
 
 .pricing-card__price {
+    -webkit-box-align: end;
+    -ms-flex-align: end;
     align-items: flex-end;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: var(--spacing-6);
     padding-bottom: var(--spacing-8);
@@ -355,14 +488,23 @@ img.header__hero {
 }
 
 .pricing-card__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     gap: var(--spacing-5);
     margin-bottom: var(--spacing-9);
 }
 
 .pricing-card__list > li {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: var(--spacing-4);
 }
@@ -387,17 +529,33 @@ img.header__hero {
 }
 
 .cta-section .row {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     gap: var(--spacing-7);
 }
 
 .cta-section__text {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 max-content;
     flex: 1 0 max-content;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     gap: var(--spacing-4);
 }
@@ -414,8 +572,14 @@ img.header__hero {
 }
 
 .cta-section__buttons {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: var(--spacing-7);
 }
@@ -423,17 +587,31 @@ img.header__hero {
 /* ---------- Footer ---------- */
 
 .footer__content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 
     margin-bottom: var(--spacing-12);
 }
 
 .company__brand {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 30rem;
     flex: 0 0 30rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
     align-items: flex-start;
     gap: var(--spacing-7);
 }
@@ -452,13 +630,21 @@ img.header__hero {
 }
 
 .company__socials {
+    -ms-flex-item-align: stretch;
     align-self: stretch;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: var(--spacing-6);
 }
 
 .company__links ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     gap: var(--spacing-5);
 }
