--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -129,6 +129,9 @@
 }
 
 @media only screen and (max-width: 30em) {
+    html {
+        font-size: 37.5%; /* 6px */
+    }
     .row {
         padding: 0 var(--spacing-9);
     }
